--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="right">
                 <ul>
                     <li><a href="#about">About Me</a></li>
-                    <li><a href="#">Experience</a></li>
                     <li><a href="#">Skills</a></li>
                     <li><a href="#">Projects</a></li>
+                    <li><a href="#">Experience</a></li>
                     <li><a href="#">Contact Me</a></li>
                     <!-- For mode change -->
                     <li><div class="mode">
@@ -38,6 +38,7 @@
             </div>
         </nav>
     </header>
+
     <main>
         <section class="about">
            <div class="description">
@@ -52,9 +53,16 @@
                     reality using HTML, CSS, and JavaScript.
                     </p>
                 </div>
-                <div class="btn">
-                    <button id="btn1" class="btn">Visit LinkedIn</button>
-                    <button id="btn2" class="btn">Visit Github</button>
+                <div class="button">
+                    <button id="btn1" class="btn">Download CV</button>
+                    <button id="btn2" class="btn">Contact</button>
+                    <div class="socials">
+                    <a id="L" class="social" href="https://www.linkedin.com/in/monalisha-kalita-ab921b252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                        <i class="fa-brands fa-linkedin fa-2xl" style="color: #000000;"></i></a>
+                    <a id="G" class="social" href="https://github.com/mona-lisha-doing-git" target="_blank">
+                        <i class="fa-brands fa-github fa-2xl" style="color: #000000;"></i>
+                    </a>
+                    </div>
                 </div>
              </div>
            </div>
