about section updated

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>  </li>
                     <!-- Contact me button -->
                      <li>
-                    <button class="contact">Contact 
+                    <button class="contact">Contact me
                         <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 45deg;"></i>
                     </button>
                     </li>
@@ -92,14 +92,38 @@
                 Always eager to learn and improve in every step of the journey. <br>
                 I embrace every opportunity to expand my knowledge and grow as a developer.
                 </p>
-                <div class="about-btn">
-                    <div class="about-btn1">
-                        <button id="education" class="abt-btn">Education</button>
-                        <button id="dsa" class="abt-btn">DSA</button>
+                <div class="about-box">
+                    <div class="abt-box" id="about-box1">
+                        <i class="fa-solid fa-user-graduate"></i>
+                        <br>
+                        <h2>Education</h2>
+                        <h3>3 Years</h3>
+                        <br>
+                        <p>B.Tech in Computer Science</p>
                     </div>
-                    <div class="about-btn2">
-                        <button id="languages" class="abt-btn">Machine Learning</button>
-                        <button id="frontend" class="abt-btn">Frontend Developer</button>
+                    <div class="abt-box" id="about-box2">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <br>
+                        <h2>DSA</h2>
+                        <h3>3 Years</h3>
+                        <br>
+                        <p>Have developed my algorithmic skills by solving several DSA based problems</p>
+                    </div>
+                    <div class="abt-box" id="about-box3">
+                        <i class="fa-solid fa-square-root-variable"></i>
+                        <br>
+                        <h2>Machine Learning</h2>
+                        <h3>3 Years</h3>
+                        <br>
+                        <p>Have explored the field of Machine Learning</p>
+                    </div>
+                    <div class="abt-box" id="about-box4">
+                        <i class="fa-solid fa-code"></i>
+                        <br>
+                        <h2>Frontend Developer</h2>
+                        <h3>1 Year</h3>
+                        <br>
+                        <p>I have polished my development skills by working on several projects.</p>
                     </div>
                 </div>
             </div>
