--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About me</a></li>
-                    <li><a href="#">Skills</a></li>
-                    <li><a href="#">Projects</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#">Experience</a></li>
+                    <li><a href="#">Skills</a></li>
                     <!-- For mode change -->
                     <li><div class="mode">
                         <i class="fa-regular fa-moon fa-lg" style="color: #ffffff;"></i>
@@ -92,7 +92,7 @@
                 Always eager to learn and improve in every step of the journey. <br>
                 I embrace every opportunity to expand my knowledge and grow as a developer.
                 </p>
-                <div class="about-box">
+                <div class="about-boxes">
                     <div class="abt-box" id="about-box1">
                         <i class="fa-solid fa-user-graduate"></i>
                         <br>
@@ -125,6 +125,80 @@
                         <br>
                         <p>I have polished my development skills by working on several projects.</p>
                     </div>
+                </div>
+            </div>
+            </div>
+        </section>
+
+        <section id="projects">
+            <div class="projects-intro">
+                <p>My work</p>
+                <h1>Projects.</h1>
+            </div>
+            <div class="projects-container">
+            <div id="typing-world" class="project-box">
+                <img src="typing_world.png" alt="">
+                <br>
+                <h2>Typing World</h2>
+                <br>
+                <p>An interactive web application designed to help users improve their typing speed and accuracy. 
+                    <ul>
+                        <li>Responsive UI</li>
+                        <li>Typing tests</li>
+                        <li>Real-time Speed and Accuracy</li>
+                        <li>Instant feedback</li>
+                    </ul>
+            </p>
+            <br>
+            <div class="project-btn">
+                <a href="https://github.com/mona-lisha-doing-git/Typing-World.git" target="_blank">
+                    <button class="repo">Git Repo</button>
+                </a>
+            </div>
+            </div>
+            <div id="Amazon-Clone" class="project-box">
+                <img src="amazon_clone.png" alt="">
+                <br>
+                <h2>Amazon-Clone</h2>
+                <br>
+                <p>The Amazon Clone is a front-end-only web project that replicates the look and feel of the Amazon homepage
+                     using just HTML and CSS. The goal of the project is to understand layout structuring, responsive design, 
+                     and styling techniques while recreating a complex, real-world e-commerce interface.</p>
+                     <br>
+                     <div class="project-btn">
+                        <a href="https://github.com/mona-lisha-doing-git/Amazon-Clone.git" target="_blank">
+                            <button class="repo">Git Repo</button>
+                        </a>
+                     </div>
+            </div>
+            <div id="Tic-Tac-Toe" class="project-box">
+                <img src="ttt.png" alt="">
+                <br>
+                <h2>Tic-Tac-Toe</h2>
+                <br>
+                <p>The Tic-Tac-Toe project is a web-based implementation of the classic 2-player game, built entirely with HTML, 
+                    CSS, and JavaScript. It provides a simple and interactive interface where two players can take turns, and 
+                    the game automatically detects win conditions or a draw.</p>
+                    <br>
+                    <div class="project-btn">
+                        <a href="https://github.com/mona-lisha-doing-git/Tic-Tac-Toe.git" target="_blank">
+                            <button class="repo">Git Repo</button>
+                        </a>
+                    </div>
+            </div>
+            <div id="Rock-Paper-Scissors" class="project-box">
+                <img src="rps.png" alt="">
+                <br>
+                <h2>Rock-Paper-Scissors</h2>
+                <br>
+                <p>The Rock-Paper-Scissors project is a fun, browser-based game where users can play against the computer. 
+                    Built with HTML, CSS, and JavaScript, the game randomly generates the computer's choice and instantly displays 
+                    the outcome based on standard game rules.</p>
+                <br>
+                <div class="project-btn">
+                    <a href="https://github.com/mona-lisha-doing-git/Rock-Paper-Scissors.git" target="_blank">
+                        <button class="repo">Git Repo</button>
+                    </a>
                 </div>
             </div>
             </div>
