completed projects section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About me</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#">Experience</a></li>
+                    <li><a href="#experience">Experience</a></li>
                     <li><a href="#">Skills</a></li>
                     <!-- For mode change -->
                     <li><div class="mode">
@@ -201,6 +201,13 @@
                     </a>
                 </div>
             </div>
+            </div>
+        </section>
+
+        <section id="experience">
+            <div class="exp-intro">
+                <p>Journey</p>
+                <h1>Experience</h1>
             </div>
         </section>
     </main>
