--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </header>
 
     <main>
+        <!-- Home -->
         <section id="home">
            <div class="description">
              <img src="profileImg.jpeg" alt="">
@@ -62,8 +63,8 @@
                     </p>
                 </div>
                 <div class="button">
-                    <button id="btn1" class="btn">Download CV</button>
-                    <button id="btn2" class="btn">Contact</button>
+                    <button id="btn1" class="btn">Download CV <i class="fa-solid fa-download"></i></button>
+                    <button id="btn2" class="btn">Contact <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 45deg;"></i></button>
                 </div>
                     <div class="socials">
                     <a id="L" class="social" href="https://www.linkedin.com/in/monalisha-kalita-ab921b252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
@@ -76,6 +77,7 @@
            </div>
         </section>
 
+        <!-- About -->
         <section id="about">
             <div class="intro">
                 <p>Introduction</p>
@@ -123,91 +125,125 @@
                         <h2>Frontend Developer</h2>
                         <h3>1 Year</h3>
                         <br>
-                        <p>I have polished my development skills by working on several projects.</p>
+                        <p>I have polished my development skills by working on several projects</p>
                     </div>
                 </div>
             </div>
             </div>
         </section>
 
+        <!-- Projects -->
         <section id="projects">
             <div class="projects-intro">
                 <p>My work</p>
                 <h1>Projects.</h1>
             </div>
             <div class="projects-container">
-            <div id="typing-world" class="project-box">
-                <img src="typing_world.png" alt="">
-                <br>
-                <h2>Typing World</h2>
-                <br>
-                <p>An interactive web application designed to help users improve their typing speed and accuracy. 
-                    <ul>
+                <div id="tw" class="project-box">
+                     <div class="project-desc">
+                    <p>
+                       Typing World is designed to help users improve their typing speed and accuracy. 
+                       <ul>
+                        <li>Interactive web application</li>
                         <li>Responsive UI</li>
-                        <li>Typing tests</li>
-                        <li>Real-time Speed and Accuracy</li>
+                        <li>Real-time speed and accuracy</li>
                         <li>Instant feedback</li>
-                    </ul>
-            </p>
+                        <li>HTML | CSS | JavaScript</li>
+                       </ul>
+                    </p>
+                    </div>
+                <br>
+                <div class="project-btn">
+                <h2>Typing World</h2>
             <br>
-            <div class="project-btn">
                 <a href="https://github.com/mona-lisha-doing-git/Typing-World.git" target="_blank">
-                    <button class="repo">Git Repo</button>
+                    <button class="repo">
+                        <i class="fa-regular fa-paper-plane"></i>
+                    </button>
                 </a>
             </div>
             </div>
-            <div id="Amazon-Clone" class="project-box">
-                <img src="amazon_clone.png" alt="">
+            <div id="ac" class="project-box">
+                 <div class="project-desc">
+                <p>
+                    The goal of the project is to understand layout structuring, responsive design, 
+                    and styling techniques.
+                    <br>
+                    <ul>
+                        <li>Amazon homepage</li>
+                        <li>Relipca</li>
+                        <li>Front-end only web project</li>
+                        <li>HTML | CSS</li>
+                    </ul>
+                </p>
+                </div>
                 <br>
+                <div class="project-btn">
                 <h2>Amazon-Clone</h2>
                 <br>
-                <p>The Amazon Clone is a front-end-only web project that replicates the look and feel of the Amazon homepage
-                     using just HTML and CSS. The goal of the project is to understand layout structuring, responsive design, 
-                     and styling techniques while recreating a complex, real-world e-commerce interface.</p>
-                     <br>
-                     <div class="project-btn">
                         <a href="https://github.com/mona-lisha-doing-git/Amazon-Clone.git" target="_blank">
-                            <button class="repo">Git Repo</button>
+                            <button class="repo">
+                                <i class="fa-regular fa-paper-plane"></i>
+                            </button>
                         </a>
                      </div>
             </div>
-            <div id="Tic-Tac-Toe" class="project-box">
-                <img src="ttt.png" alt="">
-                <br>
-                <h2>Tic-Tac-Toe</h2>
-                <br>
-                <p>The Tic-Tac-Toe project is a web-based implementation of the classic 2-player game, built entirely with HTML, 
-                    CSS, and JavaScript. It provides a simple and interactive interface where two players can take turns, and 
-                    the game automatically detects win conditions or a draw.</p>
+            <div id="ttt" class="project-box">
+                 <div class="project-desc">
+                <p>
+                    The Tic-Tac-Toe game provides a simple and interactive interface where two players can take turns, and the 
+                    game automatically detects win conditions.
                     <br>
-                    <div class="project-btn">
+                    <ul>
+                        <li>Interactive web application</li>
+                        <li>Classic 2-player Game</li>
+                        <li>HTML | CSS | JavaScript</li>
+                    </ul>
+                </p>
+                </div>
+                <br>
+                <div class="project-btn">
+                <h2>Tic-Tac-Toe</h2>
+                    <br>
                         <a href="https://github.com/mona-lisha-doing-git/Tic-Tac-Toe.git" target="_blank">
-                            <button class="repo">Git Repo</button>
+                            <button class="repo">
+                                <i class="fa-regular fa-paper-plane"></i>
+                            </button>
                         </a>
                     </div>
             </div>
-            <div id="Rock-Paper-Scissors" class="project-box">
-                <img src="rps.png" alt="">
-                <br>
-                <h2>Rock-Paper-Scissors</h2>
-                <br>
-                <p>The Rock-Paper-Scissors project is a fun, browser-based game where users can play against the computer. 
-                    Built with HTML, CSS, and JavaScript, the game randomly generates the computer's choice and instantly displays 
-                    the outcome based on standard game rules.</p>
+            <div id="rps" class="project-box">
+                 <div class="project-desc">
+                 <p>
+                    The Rock-Paper-Scissors game randomly generates the computer's choice and instantly displays 
+                    the outcome based on standard game rules.
+                    <br>
+                    <ul>
+                        <li>Interactive Web Application</li>
+                        <li>User v/s Computer</li>
+                        <li>HTML | CSS | JavaScript</li>
+                    </ul>
+                 </p>
+                 </div>
                 <br>
                 <div class="project-btn">
+                <h2>Rock-Paper-Scissors</h2>
+                <br>
                     <a href="https://github.com/mona-lisha-doing-git/Rock-Paper-Scissors.git" target="_blank">
-                        <button class="repo">Git Repo</button>
+                        <button class="repo">
+                            <i class="fa-regular fa-paper-plane"></i>
+                        </button>
                     </a>
                 </div>
             </div>
             </div>
         </section>
 
+        <!-- Experience -->
         <section id="experience">
             <div class="exp-intro">
                 <p>Journey</p>
-                <h1>Experience</h1>
+                <h1>Experience.</h1>
             </div>
         </section>
     </main>
