Working on Skills section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="#about">About me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#experience">Experience</a></li>
-                    <li><a href="#">Skills</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <!-- For mode change -->
                     <li><div class="mode">
                         <i class="fa-regular fa-moon fa-lg" style="color: #ffffff;"></i>
@@ -244,6 +244,75 @@
             <div class="exp-intro">
                 <p>Journey</p>
                 <h1>Experience.</h1>
+            </div>
+            <div class="exp-year">
+                <div class="year">2023</div>
+                <div class="year">2024</div>
+                <div class="year">2024</div>
+                <div class="year">2024</div>
+                <div class="year">2025</div>
+                <div class="year">2025</div>
+                <div class="year">2025</div>
+            </div>
+            <div class="exp-line">
+                <div class="vertical">
+                    <div class="ver-title">
+                        <h3>JU Verve: Co-coordinator</h3>
+                        <br>
+                        <p>For the first time, participated in managing an event of 'Basketball' at JECRC University's annual sports fest.</p>
+                    </div>
+                </div>
+                <div class="vertical">
+                    <div class="ver-title">
+                        <h3>JU Rhythm: Coordinator</h3>
+                        <br>
+                        <p>JECRC University's Annual Fest, managed an entire event named 'Treasure Hunt' and it was a success.</p>
+                    </div>
+                </div>
+                <div class="vertical">
+                    <div class="ver-title">
+                        <h3>Protsahan: Coordinator</h3>
+                        <br>
+                        <p>A sports event for the scool students, managed the event of 'Table Tennis'.</p>
+                    </div>
+                </div>
+                <div class="vertical">
+                    <div class="ver-title">
+                        <h3>JU Home Coming: Coordinator</h3>
+                        <br>
+                        <p>The University's annual event for fostering interaction between freshers and seniors, managed the event of 'Badminton'.</p>
+                    </div>
+                </div>
+                <div class="vertical">
+                    <div class="ver-title">
+                        <h3>JU Rhythm: Coordinator</h3>
+                        <br>
+                        <p>For the second time, managed the event of 'Treasure Hunt'.</p>
+                    </div>
+                </div>
+                <div class="vertical">
+                    <div class="ver-title">
+                        <h3>JU Eagles: Sports Representative</h3>
+                        <br>
+                        <p>The Sports Club of JECRC University, appointed as the Sports Representative for the sport 'Badminton'.</p>
+                    </div>
+                </div>
+                <div class="vertical">
+                    <div class="ver-title">
+                        <h3>JU Verve: Core Member</h3>
+                        <br>
+                        <p>At the annual sports fest of JECRC University, managed the event of 'Badminton' as the Sports Representative this time.</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Skills -->
+        <section id="skills">
+            <div class="skills-intro">
+                <p>Stack</p>
+                <h1>Skills.</h1>
             </div>
         </section>
     </main>
