--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="#about">About me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#experience">Experience</a></li>
-                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#achievements">Achievements</a></li>
                     <!-- For mode change -->
                     <li><div class="mode">
                         <i class="fa-regular fa-moon fa-lg" style="color: #ffffff;"></i>
@@ -254,7 +254,7 @@
                 <div class="year">2025</div>
                 <div class="year">2025</div>
             </div>
-            <div class="exp-line">
+            <div class="hor-line">
                 <div class="vertical">
                     <div class="ver-title">
                         <h3>JU Verve: Co-coordinator</h3>
@@ -309,13 +309,108 @@
         </section>
 
         <!-- Skills -->
-        <section id="skills">
+        <section id="achievements">
             <div class="skills-intro">
-                <p>Stack</p>
-                <h1>Skills.</h1>
+                <p>Certifications</p>
+                <h1>Achievements.</h1>
+            </div>
+            <div class="skill-certificates">
+                <div class="ver-imgs">
+                    <!-- Thumbnail -->
+                    <img src="certificates/1.png" alt="Thumbnail" class="clickable-image ver-img">
+                    <!-- Structure for Modal -->
+                    <div id="image-modal" class="modal">
+                        <span class="close">&times;</span>
+                        <img class="modal-content" id="modal-img">
+                    </div>
+                </div>
+                <div class="ver-imgs">
+                    <!-- Thumbnail -->
+                    <img src="certificates/2.png" alt="Thumbnail" class="clickable-image ver-img">
+                    <!-- Structure for Modal -->
+                    <div id="image-modal" class="modal">
+                        <span class="close">&times;</span>
+                        <img class="modal-content" id="modal-img">
+                    </div>
+                </div>
+                <div class="ver-imgs">
+                    <!-- Thumbnail -->
+                    <img src="certificates/3.png" alt="Thumbnail" class="clickable-image ver-img">
+                    <!-- Structure for Modal -->
+                    <div id="image-modal" class="modal">
+                        <span class="close">&times;</span>
+                        <img class="modal-content" id="modal-img">
+                    </div>
+                </div>
+                <div class="ver-imgs">
+                    <!-- Thumbnail -->
+                    <img src="certificates/4.png" alt="Thumbnail" class="clickable-image ver-img">
+                    <!-- Structure for Modal -->
+                    <div id="image-modal" class="modal">
+                        <span class="close">&times;</span>
+                        <img class="modal-content" id="modal-img">
+                    </div>
+                </div>
+                <div class="ver-imgs">
+                    <!-- Thumbnail -->
+                    <img src="certificates/5.png" alt="Thumbnail" class="clickable-image ver-img">
+                    <!-- Structure for Modal -->
+                    <div id="image-modal" class="modal">
+                        <span class="close">&times;</span>
+                        <img class="modal-content" id="modal-img">
+                    </div>
+                </div>
+                <div class="ver-imgs">
+                    <!-- Thumbnail -->
+                    <img src="certificates/6.png" alt="Thumbnail" class="clickable-image ver-img">
+                    <!-- Structure for Modal -->
+                    <div id="image-modal" class="modal">
+                        <span class="close">&times;</span>
+                        <img class="modal-content" id="modal-img">
+                    </div>
+                </div>
+                <div class="ver-imgs">
+                    <!-- Thumbnail -->
+                    <img src="certificates/7.png" alt="Thumbnail" class="clickable-image ver-img">
+                    <!-- Structure for Modal -->
+                    <div id="image-modal" class="modal">
+                        <span class="close">&times;</span>
+                        <img class="modal-content" id="modal-img">
+                    </div>
+                </div>
+            </div>
+            <div class="skill-line">
+                <div class="hor-line">
+                    <div class="ver-line">
+                        <h3>Machine Learning</h3>
+                    </div>
+                    <div class="ver-line">
+                        <h3>Machine Learning Internship</h3>
+                    </div>
+                    <div class="ver-line">
+                        <h3>Python</h3>
+                    </div>
+                    <div class="ver-line">
+                        <h3>Data Science for Engineers</h3>
+                    </div>
+                    <div class="ver-line">
+                        <h3>AI in Marketing</h3>
+                    </div>
+                    <div class="ver-line">
+                        <h3>Product and Brand Management</h3>
+                    </div>
+                    <div class="ver-line">
+                        <h3>German-I</h3>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
+
+    <footer>
+        
+    </footer>
+
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <!-- Setup and start animation! -->
     <script>
@@ -324,5 +419,6 @@
         typeSpeed: 60,
       });
     </script>
+<script src="app.js"></script>
 </body>
 </html>
