--- a/index.html
+++ b/index.html
@@ -409,6 +409,46 @@
     </main>
 
     <footer>
+        <div class="contactme-intro">
+            <p>Let's Connect</p>
+            <h1>Contact Me.</h1>
+        </div>
+        <div class="contactme-container">
+            <form action="https://api.web3forms.com/submit" method="POST" class="contactme">
+                <div class="sender-info">
+                    <input type="hidden" name="access_key" value="ecac4cd4-5a88-42ee-aeb6-ecf7e830c319">
+                    <input type="text" name="name" placeholder="Your Name" class="contact-inputs" required>
+                    <input type="email" name="email" placeholder="Your Email" class="contact-inputs" required>
+                </div>
+                <textarea name="message" placeholder="Your Message" class="contact-inputs" required></textarea>
+                <button type="submit" class="contact">Submit Now
+                    <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 90deg;"></i>
+                </button>
+            </form>
+        </div>
+        <div class="closure">
+            <div class="clo-intro">
+                <a href="#"><h2>Monalisha Kalita.</h2>
+                <p id="text">Turning ideas into Reality!</p>
+                </a>
+            </div>
+            <hr>
+            <div class="copy-social">
+            <div class="copyright">
+                <p>&#169; 2025, Monalisha Kalita. All rights reserved.</p>
+            </div>
+            <div class="footer-socials">
+                <ul>
+                    <li><a href="https://github.com/mona-lisha-doing-git" target="_blank">
+                        GitHub
+                    </a></li>
+                    <li><a href="https://www.linkedin.com/in/monalisha-kalita-ab921b252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                        LinkedIn
+                    </a></li>
+                </ul>
+            </div>
+            </div>
+        </div>
         
     </footer>
 
