--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
                     </p>
                 </div>
                 <div class="button">
+                    <a href="certificates/mycv.pdf" download>
                     <button id="btn1" class="btn">Download CV <i class="fa-solid fa-download"></i></button>
+                    </a>
                     <button id="btn2" class="btn">Contact <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 45deg;"></i></button>
                 </div>
                     <div class="socials">
@@ -429,7 +431,7 @@
         <div class="closure">
             <div class="clo-intro">
                 <a href="#"><h2>Monalisha Kalita.</h2>
-                <p id="text">Turning ideas into Reality!</p>
+                <p id="text">Turning Ideas into Reality!</p>
                 </a>
             </div>
             <hr>
