--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
                     </div>  </li>
                     <!-- Contact me button -->
                      <li>
+                   <a href="Contact.html" target="_blank">
                     <button class="contact">Contact me
                         <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 45deg;"></i>
                     </button>
+                    </a>
                     </li>
                 </ul>
             </div>
@@ -66,7 +68,9 @@
                     <a href="certificates/mycv.pdf" download>
                     <button id="btn1" class="btn">Download CV <i class="fa-solid fa-download"></i></button>
                     </a>
+                    <a href="Contact.html">
                     <button id="btn2" class="btn">Contact <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 45deg;"></i></button>
+                    </a>
                 </div>
                     <div class="socials">
                     <a id="L" class="social" href="https://www.linkedin.com/in/monalisha-kalita-ab921b252?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
