--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
     <!-- Setup and start animation! -->
     <script>
       var typed = new Typed("#element", {
-        strings: ["An Undergraduate Student", "A Web Developer", "A Passionate Learner","Monalisha Kalita"],
+        strings: ["An Undergraduate Student", "A Front-End Developer", "A Passionate Learner","Monalisha Kalita"],
         typeSpeed: 60,
       });
     </script>
