File up-to-date

--- a/Contact.html
+++ b/Contact.html
@@ -37,7 +37,7 @@
         </div>
         <div class="closure">
             <div class="clo-intro">
-                <a href="#"><h2>Monalisha Kalita.</h2>
+                <a href="index.html"><h2>Monalisha Kalita.</h2>
                 <p id="text">Turning Ideas into Reality!</p>
                 </a>
             </div>
