--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- For responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
     <header>
@@ -28,7 +30,10 @@
                 <a href="#about">I am <b>Monalisha Kalita</b></a>
             </div>
             <div class="right">
-                <ul>
+                <div class="menu-toggle" id="menu-toggle">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <ul id="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About me</a></li>
                     <li><a href="#projects">Projects</a></li>
@@ -39,12 +44,12 @@
                         <i id="mode-icon" class="fa-regular fa-moon fa-lg" style="color: #ffffff;"></i>
                     </div>  </li>
                     <!-- Contact me button -->
-                     <li>
-                   <a href="Contact.html" target="_blank">
-                    <button class="contact">Contact me
-                        <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 45deg;"></i>
-                    </button>
-                    </a>
+                    <li>
+                        <a href="Contact.html" target="_blank">
+                            <button class="contact">Contact me
+                                <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 45deg;"></i>
+                            </button>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -253,6 +258,7 @@
                 <p>Journey</p>
                 <h1>Experience.</h1>
             </div>
+            <div class="exp-container">
             <div class="exp-year">
                 <div class="year">2023</div>
                 <div class="year">2024</div>
@@ -313,7 +319,7 @@
                     </div>
                 </div>
             </div>
-
+            </div>
         </section>
 
         <!-- Skills -->
@@ -322,6 +328,7 @@
                 <p>Certifications</p>
                 <h1>Achievements.</h1>
             </div>
+            <div class="skills-container">
             <div class="skill-certificates">
                 <div class="ver-imgs">
                     <!-- Thumbnail -->
@@ -411,6 +418,7 @@
                         <h3>German-I</h3>
                     </div>
                 </div>
+            </div>
             </div>
         </section>
         
