Change in Responsiveness

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Navigation Bar -->
         <nav class="nav-bar">
             <div class="left">
-                <a href="#about">I am <b>Monalisha Kalita</b></a>
+                <a href="#footer">I am <b>Monalisha Kalita</b></a>
             </div>
             <div class="right">
                 <div class="menu-toggle" id="menu-toggle">
@@ -76,7 +76,7 @@
                     <button id="btn1" class="btn">Download CV <i class="fa-solid fa-download"></i></button>
                     </a>
                     <a href="Contact.html">
-                    <button id="btn2" class="btn">Contact <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 45deg;"></i></button>
+                    <button id="btn2" class="btn">Contact  <i class="fa-solid fa-arrow-up fa-rotate-by" style="--fa-rotate-angle: 90deg;"></i></button>
                     </a>
                 </div>
                     <div class="socials">
@@ -424,7 +424,7 @@
         
     </main>
 
-    <footer>
+    <footer id="footer">
         <div class="contactme-intro">
             <p>Let's Connect</p>
             <h1>Contact Me.</h1>
